--- a/ui/portal/web/public/global.css
+++ b/ui/portal/web/public/global.css
@@ -44,3 +44,8 @@ body {
     align-items: center;
   }
 }
+
+[cmdk-group-heading] {
+  @apply diatype-sm-medium text-gray-500;
+  padding: 0 11px;
+}
