--- a/ui/portal/web/public/global.css
+++ b/ui/portal/web/public/global.css
@@ -43,6 +43,13 @@ body {
     justify-content: center;
     align-items: center;
   }
+
+  .max-h-available {
+    max-height: 100vh;
+    max-height: -moz-available;
+    max-height: -webkit-fill-available;
+    max-height: -webkit-stretch;
+  }
 }
 
 [cmdk-group-heading] {
