feat: json visualizer

--- a/ui/portal/web/public/global.css
+++ b/ui/portal/web/public/global.css
@@ -54,3 +54,7 @@ body {
   @apply diatype-sm-medium text-gray-500;
   padding: 0 11px;
 }
+
+.react-json-view .variable-value div {
+  color: theme("colors.white.100") !important;
+}
