feat: always use scrollbar

--- a/ui/portal/web/public/global.css
+++ b/ui/portal/web/public/global.css
@@ -4,7 +4,7 @@
 
 body {
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: scroll;
   min-height: 100svh;
   scrollbar-gutter: stable;
   background: theme("colors.white.100");
