fix: add bg-color

--- a/ui/website/app/globals.css
+++ b/ui/website/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  font-family: "ABCDiatypeRounded";
+  font-family: "ABCDiatypeRounded", sans-serif;
 }
 
 .header {
