--- a/ui/portal/web/public/global.css
+++ b/ui/portal/web/public/global.css
@@ -2,17 +2,41 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --color-bg-primary-rice: #FFFCF6;
+  --color-bg-secondary-rice: #FFF9F0;
+  --color-bg-tertiary-rice: #FFF3E1;
+  --color-primary-red: #FEF1F1;
+  --color-primary-rice: #9C4D21;
+  --color-primary-900: #2E2521;
+  --color-secondary-700: #453D39;
+  --color-tertiary-500: #6E6865;
+  --shadow-card:0px 2px 4px rgba(171, 158, 138, 0.4), 0px -1px 2px rgba(241, 219, 186, 0.5);
+  --color-bg-card-red:linear-gradient(98.89deg, #FFFBF5 5.88%, #F9E2E2 46.73%, #FFFBF4 94.73%)
+}
+
+html.dark {
+  --color-bg-primary-rice: #2D2C2A;
+  --color-bg-secondary-rice: #363432;
+  --color-bg-tertiary-rice: #4D4B48;
+  --color-primary-red: #423C3B;
+  --color-primary-rice: #E3BD66;
+  --color-primary-900: #FFFCF6;
+  --color-secondary-700: #FFF9F0;
+  --color-tertiary-500: #B2AEA8;
+  --shadow-card:0px 4px 13px 0px #E8DBD380 0px 1px 6px 0px #D6C9B566;
+  --color-bg-card-red:linear-gradient(98.89deg, #494443 11.21%, #584D4E 46.73%, #322F2F 88.96%);
+}
+
 body {
   overflow-x: hidden;
   overflow-y: scroll;
   min-height: 100svh;
   scrollbar-gutter: stable;
-  background: theme("colors.white.100");
 }
 
 #root {
   font-family: 'ABCDiatypeRounded', sans-serif;
-  background: theme("colors.white.100");
   padding-bottom: env(safe-area-inset-bottom);
 }
 
@@ -51,10 +75,11 @@ body {
 }
 
 [cmdk-group-heading] {
-  @apply diatype-sm-medium text-gray-500;
+  @apply diatype-sm-medium text-tertiary-500;
   padding: 0 11px;
 }
 
 .react-json-view .variable-value div {
+  /* biome-ignore lint/correctness/noUnknownFunction: <explanation> */
   color: theme("colors.white.100") !important;
 }
