--- a/ui/portal/web/public/global.css
+++ b/ui/portal/web/public/global.css
@@ -8,6 +8,8 @@
   --color-surface-secondary-blue: #F0F1F7;
   --color-surface-tertiary-rice: #FFF3E1;
   --color-surface-quaternary-rice: #F3E5BF;
+  --color-surface-disabled-gray: #F5F4F4;
+  --color-foreground-disabled-gray: #ACA9A7;
   --color-button-green: #BDBF5C;
   --color-primary-red: #FEF1F1;
   --color-primary-blue: #F7F8FB;
@@ -21,6 +23,7 @@
   --color-tertiary-rice: #F3E5BF;
   --shadow-card:0px 2px 4px rgba(171, 158, 138, 0.4), 0px -1px 2px rgba(241, 219, 186, 0.5);
   --shadow-btn-shadow-gradient:0px 2px 4px rgba(171, 158, 138, 0.4), 0px -1px 2px rgba(241, 219, 186, 0.5), inset 0px 3px 6px -2px rgba(255, 255, 255, 0.64), inset 0px 0px 8px -2px rgba(255, 255, 255, 0.48);
+  --shadow-btn-secondary-shadow-gradient: 0px 2px 4px rgba(171, 158, 138, 0.4), 0px -1px 2px rgba(241, 219, 186, 0.5), inset 0px 3px 6px -2px rgba(255, 255, 255, 0.64), inset 0px 0px 8px -2px rgba(255, 255, 255, 0.48);
   --color-bg-card-red:linear-gradient(98.89deg, #FFFBF5 5.88%, #F9E2E2 46.73%, #FFFBF4 94.73%);
   --color-bg-card-green:linear-gradient(98.89deg, #F8F9EF 5.88%, #EFF0C3 46.73%, #F8F9EF 94.73%);
 }
@@ -31,6 +34,8 @@ html.dark {
   --color-surface-secondary-blue: #646273;
   --color-surface-tertiary-rice: #4D4B48;
   --color-surface-quaternary-rice: #594F3C;
+  --color-surface-disabled-gray:#363432;
+  --color-foreground-disabled-gray: #807D78;
   --color-button-green: #D2D184;
   --color-primary-red: #423C3B;
   --color-primary-blue: #595763;
@@ -43,7 +48,8 @@ html.dark {
   --color-tertiary-500: #B2AEA8;
   --color-tertiary-rice: #474237;
   --shadow-card:0px 1px 6px rgba(25, 25, 24, 0.4), 0px 4px 13px rgba(25, 25, 24, 0.5);
-  --shadow-btn-shadow-gradient:0px 0px 8px -2px #FFFFFF7A inset, 0px 3px 6px -2px #FFFFFFA3 inset, 0px 4px 6px 0px #0000000A, 0px 4px 6px 0px #0000000A;
+  --shadow-btn-shadow-gradient: 0px 1px 1px -0.5px rgba(0, 0, 0, 0.04), inset 0px 2px 3px -1px rgba(255, 255, 255, 0.07), inset 0px -1px 3px -2px rgba(0, 0, 0, 0.07), 0px 1px 1px -0.5px rgba(0, 0, 0, 0.04), 0px 3px 3px -1.5px rgba(0, 0, 0, 0.04);
+  --shadow-btn-secondary-shadow-gradient: 0px 1px 1px -0.5px rgba(0, 0, 0, 0.04), 0px 3px 3px -1.5px rgba(0, 0, 0, 0.04) ;
   --color-bg-card-red:linear-gradient(98.89deg, #494443 11.21%, #584D4E 46.73%, #322F2F 88.96%);
   --color-bg-card-green:linear-gradient(98.89deg, #373634 18.76%, #666654 46.73%, #373634 87.62%);
 }
