feat: add tabs with theme

--- a/ui/portal/web/public/global.css
+++ b/ui/portal/web/public/global.css
@@ -17,12 +17,16 @@
   --color-primary-rice: #9C4D21;
   --color-primary-900: #2E2521;
   --color-primary-gray: #D6D4D3;
+  --color-primary-green: #F9F8EC;
   --color-secondary-700: #453D39;
   --color-secondary-blue: #918CC6;
   --color-secondary-rice: #9C4D21;
   --color-secondary-gray: #EAE9E9;
+  --color-secondary-red: #FEE6E8;
+  --color-secondary-green: #F1F0D6;
   --color-tertiary-500: #6E6865;
   --color-tertiary-rice: #F3E5BF;
+  --color-tertiary-green: #E5E4B1;
   --shadow-card:0px 2px 4px rgba(171, 158, 138, 0.4), 0px -1px 2px rgba(241, 219, 186, 0.5);
   --shadow-btn-shadow-gradient:0px 2px 4px rgba(171, 158, 138, 0.4), 0px -1px 2px rgba(241, 219, 186, 0.5), inset 0px 3px 6px -2px rgba(255, 255, 255, 0.64), inset 0px 0px 8px -2px rgba(255, 255, 255, 0.48);
   --shadow-btn-secondary-shadow-gradient: 0px 2px 4px rgba(171, 158, 138, 0.4), 0px -1px 2px rgba(241, 219, 186, 0.5), inset 0px 3px 6px -2px rgba(255, 255, 255, 0.64), inset 0px 0px 8px -2px rgba(255, 255, 255, 0.48);
@@ -45,12 +49,16 @@ html.dark {
   --color-primary-rice: #E3BD66;
   --color-primary-900: #FFFCF6;
   --color-primary-gray: #595754;
+  --color-primary-green: #48463F;
   --color-secondary-700: #FFF9F0;
   --color-secondary-blue: #CBCBE7;
   --color-secondary-rice: #E3BD66;
   --color-secondary-gray: #4D4B48;
+  --color-secondary-red: #6B5D5D;
+  --color-secondary-green: #504E45;
   --color-tertiary-500: #B2AEA8;
   --color-tertiary-rice: #474237;
+  --color-tertiary-green: #3F3B35;
   --shadow-card:0px 1px 6px rgba(25, 25, 24, 0.4), 0px 4px 13px rgba(25, 25, 24, 0.5);
   --shadow-btn-shadow-gradient: 0px 1px 1px -0.5px rgba(0, 0, 0, 0.04), inset 0px 2px 3px -1px rgba(255, 255, 255, 0.07), inset 0px -1px 3px -2px rgba(0, 0, 0, 0.07), 0px 1px 1px -0.5px rgba(0, 0, 0, 0.04), 0px 3px 3px -1.5px rgba(0, 0, 0, 0.04);
   --shadow-btn-secondary-shadow-gradient: 0px 1px 1px -0.5px rgba(0, 0, 0, 0.04), 0px 3px 3px -1.5px rgba(0, 0, 0, 0.04) ;
