--- a/ui/portal/web/public/global.css
+++ b/ui/portal/web/public/global.css
@@ -4,15 +4,22 @@
 
 :root {
   --color-surface-primary-rice: #FFFCF6;
+  --color-surface-primary-green:#D2D184;
   --color-surface-secondary-rice: #FFF9F0;
   --color-surface-secondary-blue: #F0F1F7;
+  --color-surface-secondary-red: #FEE6E8;
   --color-surface-tertiary-rice: #FFF3E1;
+  --color-surface-tertiary-green: #E5E4B1;
+  --color-surface-quaternary-green: #D2D184;
   --color-surface-quaternary-rice: #F3E5BF;
   --color-surface-quaternary-rice-hover: #EFDAA4;
   --color-surface-disabled-gray: #F5F4F4;
   --color-foreground-disabled-gray: #ACA9A7;
   --color-foreground-tertiary: #837D7B;
   --color-foreground-secondary-rice: #FFF9F0;
+  --color-foreground-primary-blue: #595763;
+  --color-foreground-primary-red: #9A183D;
+  --color-foreground-primary-green: #606427;
   --color-button-green: #BDBF5C;
   --color-primary-red: #FEF1F1;
   --color-primary-blue: #F7F8FB;
@@ -24,29 +31,39 @@
   --color-secondary-blue: #918CC6;
   --color-secondary-rice: #9C4D21;
   --color-secondary-gray: #EAE9E9;
-  --color-secondary-red: #FEE6E8;
+  --color-secondary-red: #FCCFD4;
   --color-secondary-green: #F1F0D6;
   --color-tertiary-500: #6E6865;
   --color-tertiary-rice: #F3E5BF;
   --color-tertiary-green: #E5E4B1;
+  --color-tertiary-blue: #E2E3F2;
   --shadow-card:0px 2px 4px rgba(171, 158, 138, 0.4), 0px -1px 2px rgba(241, 219, 186, 0.5);
   --shadow-btn-shadow-gradient:0px 2px 4px rgba(171, 158, 138, 0.4), 0px -1px 2px rgba(241, 219, 186, 0.5), inset 0px 3px 6px -2px rgba(255, 255, 255, 0.64), inset 0px 0px 8px -2px rgba(255, 255, 255, 0.48);
   --shadow-btn-secondary-shadow-gradient: 0px 2px 4px rgba(171, 158, 138, 0.4), 0px -1px 2px rgba(241, 219, 186, 0.5), inset 0px 3px 6px -2px rgba(255, 255, 255, 0.64), inset 0px 0px 8px -2px rgba(255, 255, 255, 0.48);
   --color-bg-card-red:linear-gradient(98.89deg, #FFFBF5 5.88%, #F9E2E2 46.73%, #FFFBF4 94.73%);
+  --color-bg-card-red-2:linear-gradient(0deg, #FFFBF5, #FFFBF5), linear-gradient(98.89deg, rgba(255, 251, 245, 0.2) 5.88%, rgba(249, 212, 214, 0.2) 46.73%, rgba(255, 251, 244, 0.2) 94.73%);
   --color-bg-card-green:linear-gradient(98.89deg, #F8F9EF 5.88%, #EFF0C3 46.73%, #F8F9EF 94.73%);
+  --color-bg-card-green-2:linear-gradient(0deg, #F8F9EF, #F8F9EF), linear-gradient(98.89deg, rgba(248, 249, 239, 0.05) 5.88%, rgba(235, 236, 183, 0.05) 46.73%, rgba(248, 249, 239, 0.05) 94.73%);
 }
 
 html.dark {
   --color-surface-primary-rice: #2D2C2A;
+  --color-surface-primary-green:#7C7A65;
   --color-surface-secondary-rice: #363432;
   --color-surface-secondary-blue: #646273;
+  --color-surface-secondary-red: #6B5D5D;
   --color-surface-tertiary-rice: #4D4B48;
+  --color-surface-tertiary-green: #59574B;
+  --color-surface-quaternary-green: #6B6958;
   --color-surface-quaternary-rice: #594F3C;
   --color-surface-quaternary-rice-hover: #6A5D42;
   --color-surface-disabled-gray:#363432;
   --color-foreground-disabled-gray: #807D78;
   --color-foreground-tertiary: #999590;
   --color-foreground-secondary-rice: #363432;
+  --color-foreground-primary-blue: #F7F8FB;
+  --color-foreground-primary-red: #FEF1F1;
+  --color-foreground-primary-green: #DCDBAB;
   --color-button-green: #D2D184;
   --color-primary-red: #423C3B;
   --color-primary-blue: #595763;
@@ -63,11 +80,15 @@ html.dark {
   --color-tertiary-500: #B2AEA8;
   --color-tertiary-rice: #474237;
   --color-tertiary-green: #3F3B35;
+  --color-tertiary-blue: #646273;
+
   --shadow-card:0px 1px 6px rgba(25, 25, 24, 0.4), 0px 4px 13px rgba(25, 25, 24, 0.5);
   --shadow-btn-shadow-gradient: 0px 0px 8px -2px #FFFFFF7A inset, 0px 3px 6px -2px #FFFFFFA3 inset, 0px 4px 6px 0px #0000000A, 0px 4px 6px 0px #0000000A;
   --shadow-btn-secondary-shadow-gradient: 0px -1px 3px -2px #00000012 inset, 0px 2px 3px -1px #FFFFFF12 inset, 0px 1px 1px -0.5px #0000000A;
   --color-bg-card-red:linear-gradient(98.89deg, #494443 11.21%, #584D4E 46.73%, #322F2F 88.96%);
+  --color-bg-card-red-2:linear-gradient(0deg, #494443, #494443), linear-gradient(98.89deg, rgba(73, 68, 67, 0.2) 5.88%, rgba(88, 77, 78, 0.2) 46.73%, rgba(50, 47, 47, 0.2) 94.73%);
   --color-bg-card-green:linear-gradient(98.89deg, #373634 18.76%, #666654 46.73%, #373634 87.62%);
+  --color-bg-card-green-2:linear-gradient(0deg, #373634, #373634), linear-gradient(98.89deg, rgba(55, 54, 52, 0.05) 5.88%, rgba(102, 102, 84, 0.05) 46.73%, rgba(55, 54, 52, 0.05) 94.73%);
 }
 
 body {
